Refactor transaction handling and user management
Removed unused user transaction methods and actions, cleaned up user details template by removing redundant code, and standardized ID types in DTOs. Adjusted view logic to simplify admin and user separation, while ensuring consistent attribute handling across controllers.